[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'reportsrender'
author = 'Gregor Sturm'
author-email = 'mail@gregor-sturm.de'
home-page = 'https://github.com/grst/reportsrender'
description-file = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: R'
]
requires-python = '>= 3.6'
requires = [
    'docopt',
    'ipython',
    'jupytext',
    'papermill',
    'nbconvert',
    'ipykernel',
    'get_version'
]

[tool.flit.scripts]
reportsrender = "reportsrender.cli:main"

[tool.flit.metadata.requires-extra]
test = [
    'pytest',
]

